# test

./: .env_template  Dockerfile  docker-compose.yaml  pyproject.toml  test.py
common_utils/: decorators.py  mixins.py  orm.py
config/: settings.py  urls.py
doctors/: admin.py  const.py  models.py  serializers.py  types.py  urls.py  views.py
doctors/migrations/: 0001_initial.py  0002_lpuset.py  0003_lpu_lpu_set.py  0004_service.py  0005_serviceprice.py  0006_lpu_services.py  0007_appointment.py  0008_doctor_master.py  0009_manipulationtype_manipulation_mkbtype_and_more.py  0010_manipulation_is_parsed.py  0011_manipulation_frequency.py  0012_manipulation_unique_doctor_mtype.py  0013_doctorpractice.py  0014_manipulation_is_active.py  0015_appointmentdirection.py  0016_doctormkbtypepractice_total_appointments_and_more.py
doctors/templates/doctors/: index.html
